
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

02-June-2012 Jean-Marie Simonet
 # [#28375] Remove blacklist code from FinderIndexerHelper. Thanks Michael
 # [#28605] ACL regression in com_finder. Thanks Sander
 # [#27819] The articles model displays articles for which there is no category access. Thanks Carsten and Nick

01-June-2012 Jean-Marie Simonet
 # [#28589] *ACL regression in com_search
 # [#28588] *ACL regression in com_messages
 # [#28587] *ACL regression in com_redirect
 # [#28579] Fix xreference regression from 1.7 to 2.5. Thanks Andrea.
 # [#28561] Move some JFormFields from the platform to the CMS. Thanks Rouven.
 # [#28335] Simplify schema path in installation, add support for other databases. Thanks Michael.
 # [#28598] *Article Category list displays hits in author column if no article author or createdbyalias.
 
30-May-2012 Jean-Marie Simonet
 $ Missing language string
 $ Updating installation ini files: et-EE, mn-MN

29-May-2012 Jean-Marie Simonet
 # [#28566] Update TinyMCE 3.5.1.1. Thanks Rouven

28-May-2012 Jean-Marie Simonet
 # [#28572] *Administration user notes checked on notes page gives warning arugment missing
 ^ [#28370] Get rid of assign() uses in view: admin + site.Thanks Ofer and Rouven
 ^ [#28442] Update Library Manifests. Thanks Michael.

27-May-2012 Jean-Marie Simonet
 # [#28022] Smart search and unpublished Content Maps fails after edit of an article.Thanks Michael.
 $ [#28571] Typo in en-GB.com_templates.ini. Thanks Stella.
 ^ [#28569] Correct docblocs in com_joomlaupdate. Thanks Rouven.

25-May-2012 Jean-Marie Simonet
 $ Updating installation ini file: ug-CN
 $ Adding new installation language: hi-IN

23-May-2012 Jean-Marie Simonet
 ^ [#28547] ACL consistency - Use the API and access.xml everywhere. Thanks Michael.
 # [#28483] *Weblinks module should only pass on category related queries when catid > 0

22-May-2012 Jean-Marie Simonet